# mini-inventory-app

./: .env  .env.example  .gitignore  Makefile  README.md  db.sqlite3  hello.py  pyproject.toml  tailwind.config.js
inventory/: settings.py  urls.py
inventory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
products/: admin.py  forms.py  models.py  tests.py  views.py
products/management/commands/: seed_products.py
products/migrations/: 0001_initial.py  0002_reset_product_schema.py  0003_alter_product_price.py
products/templatetags/: product_tags.py
static/css/: app.css
static/js/: app.js
templates/: base.html
templates/components/: empty_state.html  modal.html  sidebar.html  skeletons.html  toast.html  topbar.html
templates/products/: _card.html  _cards_mobile.html  _form.html  _product_cards.html  _product_list_oob.html  _product_rows.html  _row.html  _stats.html  _table.html  create_modal.html  delete_modal.html  edit_modal.html  form.html  list.html
